--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,7 @@
 	path = M2M/QNICE
 	url = https://github.com/sy2002/QNICE-FPGA
 	branch = dev-V1.61
+[submodule "Arcade-Xevious_MiSTer"]
+	path = CORE/Arcade-Xevious_MiSTer
+	url = git@github.com:rjaremczak/Arcade-Xevious_MiSTer.git
+	branch = mega65
